testsuite/resolution/compile-fail/primitive-field.verona
// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.

primitive P {
  // CHECK-L: primitive-field.verona:${LINE:+1}:3: error: Primitives cannot have fields
  f: None & imm;
}
